<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComboActivity"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/label_N"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/data_nValue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/lightGray"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/label_N"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/label_K"
        app:layout_constraintEnd_toStartOf="@+id/data_nValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/data_nValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/label_K"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/nValueHint"
        android:inputType="numberDecimal"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/data_kValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_N"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_K"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/data_kValue"
        android:layout_alignEnd="@+id/label_N"
        android:layout_alignRight="@+id/label_N"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/lightGray"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/label_K"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/button_forward"
        app:layout_constraintEnd_toStartOf="@+id/data_kValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_N" />

    <EditText
        android:id="@+id/data_kValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_forward"
        android:layout_alignLeft="@+id/data_nValue"
        android:layout_alignStart="@+id/data_nValue"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:hint="@string/kValueHint"
        android:inputType="numberDecimal"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/button_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_K"
        app:layout_constraintTop_toBottomOf="@+id/data_nValue" />

    <Button
        android:id="@+id/button_forward"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="244dp"
        android:layout_marginStart="245dp"
        android:onClick="calculateCombo"
        android:text="@string/find"
        app:layout_constraintBottom_toTopOf="@+id/red_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_below="@+id/button_forward"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#FF00"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forward" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_forward"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_forward"
        android:layout_marginEnd="252dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="8dp"
        android:onClick="goBack"
        android:text="@string/returns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_line" />

</android.support.constraint.ConstraintLayout>