<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComboResults">

    <TextView
        android:id="@+id/permu_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="32dp"
        android:text="@string/combo_results"
        android:textSize="24dip"
        app:layout_constraintBottom_toTopOf="@+id/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="174dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="8dp"
        android:textSize="24dip"
        android:text="@string/label_Results"
        app:layout_constraintBottom_toTopOf="@+id/permutations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permu_results" />

    <TextView
        android:id="@+id/permutations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="118dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="8dp"
        android:text="@string/permutations"
        android:textSize="24dip"
        app:layout_constraintBottom_toTopOf="@+id/red_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results" />

    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_below="@+id/button_forward"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#FF00"
        app:layout_constraintBottom_toTopOf="@+id/button_backward2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permutations" />

    <Button
        android:id="@+id/button_backward2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/results"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:onClick="goBack"
        android:text="@string/returns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_line" />

</android.support.constraint.ConstraintLayout>