<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/label_A"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/data_aValue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:background="@color/lightGray"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/label_A"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/data_aValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/data_aValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/label_R"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/nValueHint"
        android:inputType="numberDecimal"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/label_R"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_A" />

    <TextView
        android:id="@+id/label_R"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/data_rValue"
        android:layout_alignEnd="@+id/label_A"
        android:layout_alignRight="@+id/label_A"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightGray"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/label_R"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/data_rValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_aValue" />

    <EditText
        android:id="@+id/data_rValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/repeats"
        android:layout_alignLeft="@+id/data_aValue"
        android:layout_alignStart="@+id/data_aValue"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/kValueHint"
        android:inputType="numberDecimal"
        android:textSize="16dip"
        app:layout_constraintBottom_toTopOf="@+id/repeats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_R" />

    <TextView
        android:id="@+id/repeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="142dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/repeats"
        android:textSize="20dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_rValue" />

    <RadioButton
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:text="Yes"
        app:layout_constraintEnd_toStartOf="@+id/noButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeats" />

    <RadioButton
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="8dp"
        android:text="No"
        app:layout_constraintBottom_toTopOf="@+id/button_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yesButton"
        app:layout_constraintTop_toBottomOf="@+id/repeats" />

    <Button
        android:id="@+id/button_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/red_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="8dp"
        android:onClick="calculatePermu"
        android:text="@string/find"
        app:layout_constraintBottom_toTopOf="@+id/red_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesButton" />

    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_below="@+id/button_forward"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#FF00"
        app:layout_constraintBottom_toTopOf="@+id/button_backward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forward" />

    <Button
        android:id="@+id/button_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_forward"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_forward"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:onClick="goBack"
        android:text="@string/returns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_line" />


</android.support.constraint.ConstraintLayout>